/*
 * Generated file cms/v4/error/error.proto.
 *
 * Product version: 1.0-SNAPSHOT
 *
 * Part of the Content Management System APIs
 *
 * (c) 2023 Nutanix Inc.  All rights reserved
 *
 */

syntax = "proto2";

package cms.v4.error;

option java_multiple_files = true;
option java_package = "cms.v4.error";
option go_package = "cms/v4/error";

import "protos/apis/common/v1/config/config.proto";

/*
 * This schema is generated from AppMessage.java
 */

message AppMessage {
  /*
   * 
   */

  optional string message = 201;
  /*
   * 
   */

  optional common.v1.config.MessageSeverityMessage.MessageSeverity severity = 202;
  /*
   * 
   */

  optional string code = 203;
  /*
   * The locale for the message description.
   */

  optional string locale = 204 [default = "en_US"];
  /*
   * 
   */

  optional string error_group = 205;
  /*
   * 
   */

  map<string, string> arguments_map = 206;
  }
/*
 * OneOf item wrapper message
 */

message AppMessageArrayWrapper {
  /*
   * Value field in oneOf item wrapper message
   */

  repeated cms.v4.error.AppMessage value = 1000;
  }
/*
 * OneOf item wrapper message
 */

message SchemaValidationErrorWrapper {
  /*
   * Value field in oneOf item wrapper message
   */

  optional cms.v4.error.SchemaValidationError value = 1000;
}
/*
 * This schema is auto-generated by the Open API Dev Platform as REST response for 4xx and 5xx error responses.
 */

message ErrorResponse {
  /*
   * This schema is auto-generated by the Open API Dev Platform as REST response for 4xx and 5xx error responses.
   */
  oneof error {
    /*
     * 
     */
    cms.v4.error.AppMessageArrayWrapper app_message_array_error = 201;
    /*
     * 
     */
    cms.v4.error.SchemaValidationErrorWrapper schema_validation_error_error = 202;
  }
  }
/*
 * This schema is generated from SchemaValidationError.java
 */

message SchemaValidationError {
  /*
   * 
   */

  optional string timestamp = 201;
  /*
   * 
   */

  optional int32 status_code = 202;
  /*
   * 
   */

  optional string error = 203;
  /*
   * 
   */

  optional string path = 204;
  /*
   * 
   */

  repeated cms.v4.error.SchemaValidationErrorMessage validation_error_messages = 205;
  }
/*
 * This schema is generated from SchemaValidationErrorMessage.java
 */

message SchemaValidationErrorMessage {
  /*
   * 
   */

  optional string location = 201;
  /*
   * 
   */

  optional string message = 202;
  /*
   * 
   */

  optional string attribute_path = 203;
}
